# pose_estimation_by_model

./: CMakeLists.txt  README.md
include/: UBT_multiObjectPosEstimation.hpp  moped.hpp  sXML.hpp
include/astra/astra_include/: astra.hpp
include/astra/protocol/: my_msg.hpp
include/astra/viewer/: viewer.h
libmoped/: CMakeLists.txt
libmoped/include/: moped.hpp  sXML.hpp
libmoped/libs/SiftGPU/: SiftGPU.h
libmoped/src/: GLOBAL_DISPLAY.hpp  STATUS_DISPLAY.hpp  config.hpp  moped.cpp  util.hpp
libmoped/src/cluster/: CLUSTER_DISPLAY.hpp  CLUSTER_MEAN_SHIFT_CPU.hpp
libmoped/src/feat/: FEAT_DISPLAY.hpp  FEAT_SIFT_CPU.hpp  FEAT_SIFT_GPU.hpp
libmoped/src/filter/: FILTER_PROJECTION_CPU.hpp
libmoped/src/match/: MATCH_ANN_CPU.hpp  MATCH_DISPLAY.hpp
libmoped/src/pose/: POSE_DISPLAY.hpp  POSE_RANSAC_LM_DIFF_REPROJECTION_CPU.hpp
libmoped/src/util/: UTIL_UNDISTORT.hpp
libs/astra/OpenNI2/Drivers/: PS1080.ini  orbbec.ini
models/: camera_astra.xml  walker.moped.xml
src/: CMakeLists.txt  UBT_multiObjectPosEstimation.cpp  main_astra.cpp
src/astra_src/: astra.cpp
